...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn4-yG-cxW" userLabel="Add Server">
                                <rect key="frame" x="175" y="481" width="64" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="Home.Register.Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="29" id="uHV-vJ-PUc"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
        <scene sceneID="tbh-yG-xcX">
            <objects>
                <viewController storyboardIdentifier="ServerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="znn-gf-Efm"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eWS-vU-XLm">
                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Server.Server.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="teE-c3-any">
                                <rect key="frame" x="188.5" y="184" width="37" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="Server.Next.Button"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="nextPressed:" destination="LPm-N3-FEI" eventType="touchUpInside" id="RgU-Ws-f1q"/>
...
        <scene sceneID="VmF-x9-ghS">
            <objects>
                <viewController storyboardIdentifier="ClientIdViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hyy-VQ-rcz" userLabel="ClientId" customClass="ClientIdViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="T3x-Ud-Wa2"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientId" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsM-5G-HXR">
                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientId.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientSecret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-4L-sqH">
                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientSecret.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDJ-gL-tA5">
                                <rect key="frame" x="188.5" y="222" width="37" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="ClientId.Next.Button"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Next"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C1D-rB-gOJ">
                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login.Username.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UQC-pk-uO1">
                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login.Password.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2e6-On-1Cd">
