...
/* Class = "UILabel"; text = "Title"; ObjectID = "sIr-IY-HU7"; */
"sIr-IY-HU7.text" = "Title";

/* Class = "UILabel"; text = "Read articles"; ObjectID = "tpY-2N-dv1"; */
"tpY-2N-dv1.text" = "Read articles";

/* Class = "UILabel"; text = "All articles"; ObjectID = "uDI-eD-zGh"; */
"uDI-eD-zGh.text" = "All articles";

/* Class = "UILabel"; text = "Starred articles"; ObjectID = "vWc-HK-q7e"; */
"vWc-HK-q7e.text" = "Starred articles";

/* Class = "UILabel"; text = "Title"; ObjectID = "vga-bl-sXP"; */
...
